# Glimpse

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  SETUP_GUIDE.md  async_runtime.py  build_release.bat  container.py  event_bus.py  main.py  main_api.py  main_legacy_qt.py  pyproject.toml  requirements-packaging.txt  requirements.txt  runtime_env.py  start.bat  start_tauri.bat  start_tauri_visible.bat  test_ark_api.py
.omo/plans/: cluster_screenshot.md  fix_ui_and_hotkeys.md  search_labels_design.md  search_labels_implementation.md
Glimpse/: .env.example  container.py  requirements.txt  test_env.py
Glimpse/config/: path_manager.py  settings_manager.py
Glimpse/core/: capture.py
Glimpse/db/: chroma_manager.py
Glimpse/services/: ai_client.py  embedding_client.py  keyboard_manager.py  memory_service.py  ocr_engine.py
Glimpse/ui/: locale_manager.py  main_window.py  signals.py
Glimpse/ui/locales/: en-US.json  zh-CN.json
Glimpse/ui/styles/: light.qss
Glimpse/ui/widgets/: __init__.py  loading_spinner.py
api/: dependencies.py  desktop_actions.py  hotkeys.py  schemas.py  server.py  websocket.py
api/routes/: __init__.py  cluster.py  images.py  memories.py  screenshot.py  search.py  settings.py
config/: __init__.py  path_manager.py  settings_manager.py
core/: __init__.py  capture.py  cluster_buffer.py  task_queue.py
db/: __init__.py  chroma_manager.py  sqlite_manager.py
docs/: API_INTERFACES.md  FRONTEND_ARCHITECTURE.md  FRONTEND_TODO.md  SPEC.md  UI_COMPONENTS.md  UI_FLOWS.md
docs/superpowers/plans/: 2026-05-27-settings-dialog-buttons.md
docs/superpowers/specs/: 2026-05-27-settings-dialog-buttons-design.md
glimpse-frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tauri.dev.conf.json  vite.config.ts
glimpse-frontend/src/: App.vue  main.ts  vite-env.d.ts
glimpse-frontend/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
glimpse-frontend/src-tauri/src/: main.rs
glimpse-frontend/src/api/: client.ts  websocket.ts
glimpse-frontend/src/components/: CloseActionDialog.vue  ClusterBar.vue  DetailPanel.vue  EmptyState.vue  ImagePreviewModal.vue  LoadingSpinner.vue  MemoryList.vue  NotificationToast.vue  SearchBar.vue
glimpse-frontend/src/config/: runtime.ts
glimpse-frontend/src/platform/: desktop.ts
glimpse-frontend/src/router/: index.ts
glimpse-frontend/src/stores/: cluster.ts  memories.ts  notification.ts  settings.ts
glimpse-frontend/src/styles/: main.css
glimpse-frontend/src/utils/: i18n.ts  logger.ts  memory-images.ts  theme.ts
glimpse-frontend/src/views/: Home.vue  MemoryDetail.vue  Settings.vue
scripts/: apply_prompt.py  build_backend_sidecar.py  diagnose_search.py  rebuild_chroma.py  run_tauri_dev.ps1  setup_tauri_env.bat  test_chinese_search.py  verify_search.py
services/: __init__.py  ai_client.py  bootstrap.py  embedding_client.py  hotkey_utils.py  keyboard_manager.py  memory_service.py  ocr_engine.py  search_service.py
tests/: conftest.py  test_api.py
tests/helpers/: mock_services.py
tests/integration/: conftest.py  test_ai_analysis_pipeline.py  test_capture_to_storage.py  test_database_sync.py  test_end_to_end.py  test_search_pipeline.py
tests/unit/api/: test_hotkeys.py
tests/unit/config/: test_path_manager.py  test_settings_manager.py
tests/unit/core/: test_capture.py  test_cluster_buffer.py  test_task_queue.py
tests/unit/db/: test_chroma_manager.py  test_sqlite_manager.py
tests/unit/services/: test_ai_client.py  test_bootstrap.py  test_embedding_client.py  test_hotkey_utils.py  test_keyboard_manager.py  test_memory_service.py  test_ocr_engine.py  test_search_service.py
tests/unit/ui/: test_settings_dialog_buttons.py
ui/: __init__.py  app_icon.py  locale_manager.py  main_window.py  memory_detail_dialog.py  qt_event_bridge.py  settings_dialog.py  signals.py  theme_manager.py
ui/locales/: en-US.json  zh-CN.json
ui/styles/: dark.qss  light.qss
ui/widgets/: __init__.py  loading_spinner.py  segmented_filter.py
utils/: logger.py
