[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glimpse"
version = "0.1.0"
description = "AI 驱动的桌面记忆检索系统 - 截图、OCR、AI 摘要、精确与语义检索"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "MIT" }
authors = [
    { name = "xiaofeng-iii", email = "m13751593510@163.com" },
]
keywords = [
    "screenshot",
    "ai",
    "memory",
    "desktop",
    "ocr",
    "tauri",
    "fastapi",
    "semantic-search",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics :: Capture",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core UI
dependencies = [
    "PySide6==6.11.0",

    # Database & Embedding
    "chromadb==0.4.18",
    "sentence-transformers==2.2.2",
    "transformers==4.32.1",
    "huggingface-hub==0.17.3",
    "tokenizers==0.13.3",
    "numpy==1.26.4",

    # Capture & Processing
    "mss==9.0.1",
    "Pillow==10.2.0",
    "pynput==1.7.6",
    "rapidocr-onnxruntime==1.4.4",

    # API
    "openai==1.13.3",
    "httpx==0.27.2",
    "requests==2.33.1",
    "python-dotenv==1.2.2",

    # Utilities
    "psutil==5.9.8",
    "python-dateutil==2.9.0.post0",

    # API Layer (for Tauri frontend)
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "websockets==12.0",
    "pydantic==2.5.3",

    # Compatibility
    "certifi==2026.2.25",
    "charset-normalizer==3.4.7",
    "idna==3.11",
    "urllib3==2.6.3",
]

[project.optional-dependencies]
# Tauri 桌面打包依赖
packaging = [
    "pyinstaller>=6.7,<7",
]
# 开发工具：格式化、Lint、类型检查
dev = [
    "ruff>=0.5.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    "types-python-dateutil>=2.8.0",
]
# 测试依赖（主项目已包含 pytest-qt，但单独声明以示隔离）
test = [
    "pytest==7.4.4",
    "pytest-qt==4.2.0",
    "pytest-cov==4.1.0",
]
# 完整开发环境（dev + test）
all = [
    "glimpse[packaging,dev,test]",
]

[project.urls]
"Homepage" = "https://github.com/xiaofeng-iii/Glimpse"
"Bug Tracker" = "https://github.com/xiaofeng-iii/Glimpse/issues"

[project.scripts]
# API 启动入口
glimpse-api = "main_api:main"
# 旧版 PySide6 桌面入口（保留用于回退）
glimpse-qt = "main_legacy_qt:main"

[project.gui-scripts]
# Tauri 启动入口
glimpse = "main:main"

###############################################################################
# 包发现配置
###############################################################################

[tool.setuptools]
packages = [
    "api",
    "api.routes",
    "config",
    "core",
    "db",
    "services",
    "ui",
    "ui.widgets",
    "utils",
]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.txt"]

###############################################################################
# Pytest 配置（从 tests/pytest.ini 迁移）
###############################################################################

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

###############################################################################
# 覆盖率配置
###############################################################################

[tool.coverage.run]
branch = true
source = ["api", "config", "core", "db", "services", "utils"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "main.py",
    "main_api.py",
    "main_legacy_qt.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "def __repr__",
    "pass",
]

###############################################################################
# MyPy 类型检查配置
###############################################################################

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true
plugins = []
exclude = [
    "build/",
    "dist/",
    "glimpse-frontend/",
    ".venv/",
    "venv/",
    "env/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

###############################################################################
# Ruff 配置（linter + formatter）
###############################################################################

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["api", "config", "core", "db", "services", "ui", "utils", "tests"]
extend-exclude = [
    "build",
    "dist",
    "glimpse-frontend",
    ".venv",
    "venv",
    "env",
    "GlimpseData",
]

[tool.ruff.lint]
# 选定的规则集
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate (commented-out code)
    "PL",   # pylint
]
ignore = [
    "E501",   # line too long (由 formatter 处理)
    "B008",   # function call in default argument (FastAPI Depends 常用)
    "PLR0913", # too many arguments
    "PLR2004", # magic value
    "SIM108", # use ternary operator
    "N818",   # exception name should end in Error
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLR2004", # magic values in tests are common
    "B011",    # asserts are common in tests
    "ERA001",  # commented-out code in tests for documentation
]
"scripts/**/*.py" = [
    "PLR0912", # too many branches in scripts
    "PLR0915", # too many statements in scripts
    "T201",   # print statements in scripts are intentional
]
"main*.py" = [
    "T201",   # print statements in entry points
]

[tool.ruff.lint.isort]
known-first-party = ["api", "config", "core", "db", "services", "ui", "utils"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
line-ending = "lf"
skip-magic-trailing-comma = false

###############################################################################
# PyInstaller 配置（侧车构建）
###############################################################################
#
# 注意：主打包入口仍是 scripts/build_backend_sidecar.py。
# 此处仅提供基础钩子信息，便于 pyinstaller[hook] 等工具读取。
# 实际构建使用 PyInstaller 命令行参数，详见 build_release.bat。

[tool.pyinstaller]
# 主入口
entry-point = "main_api.py"
# 单文件输出模式（"onedir" 用于 Tauri sidecar）
mode = "onedir"
# 包含的隐藏模块
hidden-imports = [
    "api.server",
    "api.dependencies",
    "api.desktop_actions",
    "api.hotkeys",
    "api.schemas",
    "api.websocket",
    "api.routes.cluster",
    "api.routes.images",
    "api.routes.memories",
    "api.routes.search",
    "api.routes.screenshot",
    "api.routes.settings",
    "config.path_manager",
    "config.settings_manager",
    "core.capture",
    "core.cluster_buffer",
    "core.task_queue",
    "db.chroma_manager",
    "db.sqlite_manager",
    "services.ai_client",
    "services.bootstrap",
    "services.embedding_client",
    "services.keyboard_manager",
    "services.memory_service",
    "services.ocr_engine",
    "services.search_service",
    "async_runtime",
    "container",
    "event_bus",
    "runtime_env",
    "utils.logger",
]
# 收集数据文件的包
collect-data = [
    "certifi",
    "chromadb",
    "onnxruntime",
    "rapidocr_onnxruntime",
    "sentence_transformers",
    "transformers",
    "tokenizers",
    "huggingface_hub",
]
# 复制元数据的包（用于 importlib.metadata）
copy-metadata = [
    "chromadb",
    "sentence-transformers",
    "transformers",
    "tokenizers",
    "huggingface-hub",
    "openai",
    "fastapi",
    "uvicorn",
    "rapidocr-onnxruntime",
    "onnxruntime",
]
